//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class EmployeeNotification
    {
        public System.Guid RowId { get; set; }
        public System.Guid EmployeeId { get; set; }
        public System.Guid NotificationId { get; set; }
        public Nullable<System.Guid> TaskId { get; set; }
        public bool IsRead { get; set; }
        public System.DateTime CreatedAt { get; set; }
    }
}
