@startuml ER_Part02_Employee_Rights
title Часть 2. Сотрудники и права доступа (DriveCare Pro)
hide circle
skinparam linetype ortho
skinparam shadowing false
top to bottom direction

entity "Employees" {
  RowId *
  FirstName
  LastName
  MidName
  Login
  Password
  Email
  Phone
  BirthDate
  HireDate
  IsActive
  Description
  WorkshopId
}

entity "EmployeeRolesMap" {
  RowId *
  EmployeeId
  RoleId
  Description
}

entity "EmployeeNotifications" {
  RowId *
  EmployeeId
  NotificationId
  TaskId
  IsRead
  CreatedAt
}

entity "Roles" {
  RowId *
  Name
  Description
  WorkshopId
  IsActive
  CompanyId
}

entity "Permissions" {
  RowId *
  Code
  Name
  Description
  PermissionGroupId
}

entity "PermissionGroups" {
  RowId *
  Code
  Name
  Description
}

entity "RolePermissionsMap" {
  RowId *
  RoleId
  PermissionId
}

entity "RolePermissions" {
  RowId *
  RoleId
  PermissionId
}

entity "Notifications" {
  RowId *
  Title
  Message
  Description
  CarId
  CreatedAt
  IsViewed
}

EmployeeRolesMap }o--|| Employees : EmployeeId
EmployeeRolesMap }o--|| Roles : RoleId
EmployeeNotifications }o--|| Employees : EmployeeId
EmployeeNotifications }o--|| Notifications : NotificationId
Permissions }o--|| PermissionGroups : PermissionGroupId
RolePermissionsMap }o--|| Roles : RoleId
RolePermissionsMap }o--|| Permissions : PermissionId
RolePermissions }o--|| Roles : RoleId
RolePermissions }o--|| Permissions : PermissionId
@enduml
